force-app/main/default/objects/Bed__c/fields/Admission_IPD__c.field-meta.xml
<CustomField>
    <fullName>Admission_IPD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission(IPD)</label>
    <referenceTo>Admission_IPD__c</referenceTo>
    <relationshipLabel>Beds</relationshipLabel>
    <relationshipName>Beds</relationshipName>
    <type>Lookup</type>
</CustomField>