force-app/main/default/objects/Bed__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <label>Ward</label>
    <referenceTo>Ward__c</referenceTo>
    <relationshipLabel>Beds</relationshipLabel>
    <relationshipName>Beds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>