force-app/main/default/objects/Bed__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Admission_IPD__c</columns>
    <columns>Bed_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Ward__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>